--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div id="message"></div>
       <p id="bot-typing"></p>
       <div>
-        <input type="text"  onKeyPress="if (event.keyCode == 13) {sendMessage();}" name="input" placeholder="Quelle est votre question?" id="input" required>
+        <input type="text"  onKeyPress="if (event.keyCode == 13) {sendMessage();}" name="input" placeholder="Quelle est votre question?" id="input" >
         <button type="submit" onclick="sendMessage()">Envoyer</button>
       </div>
     </div>
